# neuronglengine

./: .gitattributes  CMakeLists.txt  vcpkg.json
glad/: CMakeLists.txt
glad/include/glad/: gl.h
run/: imgui.ini
run/res/: cube.nmesh  cube_onestrip.nmesh  frag.glsl  mesh.nmesh  test.glb  test2.glb  vert.glsl
src/: main.cpp
src/neuron/: glwrap.cpp  glwrap.hpp  locking_ptr_ref.hpp  mesh.cpp  mesh.hpp  window.cpp  window.hpp
src/neuron/asset/: asset.cpp  asset.hpp  framebuffer.cpp  framebuffer.hpp  mesh.cpp  mesh.hpp  post_processing_pipeline.cpp  post_processing_pipeline.hpp  render_target.cpp  render_target.hpp  shader.cpp  shader.hpp
src/neuron/ecs/: components.hpp
src/neuron/scene/: scene.cpp  scene.hpp
